--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .bgHome {
-    background-image: url("./images/foto1bg.jpg");
+    background-image: url("./images/bg-llamas-humo-5.jpg");
 
     /* Set a specific height */
     min-height: 100vh; 
@@ -49,7 +49,7 @@ body {
 
 .bgHome nav ul li a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 .iconMenu {
@@ -58,6 +58,14 @@ body {
     right: 0;
     padding: 1rem;
     cursor: pointer;
+    border-top: 2px white solid;
+    border-right: 2px white solid;
+    border-top-right-radius: 5px;
+    margin: 1rem;;
+}
+
+.iconMenu:hover {
+    border-color: lightslategrey;
 }
 
 @media (min-width: 960px) {
