--- a/assets/style.css
+++ b/assets/style.css
@@ -50,6 +50,8 @@ body {
 .bgHome nav ul li a {
     text-decoration: none;
     color: white;
+    display: inline-block;
+    position: relative;
 }
 
 .iconMenu {
@@ -61,7 +63,7 @@ body {
     border-top: 2px white solid;
     border-right: 2px white solid;
     border-top-right-radius: 5px;
-    margin: 1rem;;
+    margin: 1rem;
 }
 
 .iconMenu:hover {
@@ -82,6 +84,28 @@ body {
 
     .bgHome nav ul li {
         display: inline;
+    }
+
+    a.linkMenu:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        display: inline-block;
+        height: 1em;
+        width: 100%;
+        border-bottom: 1px solid;
+        margin-top: 10px;
+        opacity: 0;
+        -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+        transition: opacity 0.35s, transform 0.35s;
+        -webkit-transform: scale(0,1);
+        transform: scale(0,1);
+    }
+
+    a.linkMenu:hover:after {
+        opacity: 1;
+        -webkit-transform: scale(1);
+        transform: scale(1);
     }
 
     .iconMenu {
