--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Calligraffitti&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Calligraffitti|Satisfy&display=swap');
 
 body {
     margin: 0;
@@ -8,13 +8,15 @@ body {
     display: grid;
     grid-gap: 0;
     grid-template-columns: 100%;
-    max-width: 1920px;
+    /* max-width: 1920px; Ya veremos si lo dejo */
+    max-width: 1700px;
     margin: auto;
 }
 
 .bgHome {
     background-image: url("./images/bg-llamas-humo-5.jpg");
-
+    /* max-width: 1500px; Ya veremos si lo dejo*/
+    margin: auto;
     /* Set a specific height */
     min-height: 100vh; 
   
@@ -70,7 +72,21 @@ body {
     border-color: lightslategrey;
 }
 
+.inicioImg img {
+    max-width: 100%;
+}
+
+.inicio {
+    padding: 2rem;
+    font-size: 1.8em;
+    font-family: 'Satisfy', cursive;
+}
+
 @media (min-width: 960px) {
+
+    .container {
+        grid-template-columns: 50% 50%;
+    }
 
     .bgHome nav {
         display: block;
@@ -110,6 +126,39 @@ body {
 
     .iconMenu {
         display: none;
+    }
+
+    .inicioImg {
+        position: sticky;
+        position: -webkit-sticky;
+        top: 0;
+        z-index: -1;
+    }
+
+    .col-1 {
+        grid-column: 1;
+    }
+    .col-2 {
+        grid-column: 2;
+    }
+    .col-1-2 {
+        grid-column: 1 / 3;
+    }
+
+    .row-1 {
+        grid-row: 1;
+    }
+    .row-2 {
+        grid-row: 2;
+    }
+    .row-3 {
+        grid-row: 3;
+    }
+    .row-4 {
+        grid-row: 4;
+    }
+    .row-5 {
+        grid-row: 5;
     }
 
   }
