--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,7 @@ body {
     grid-gap: 0;
     grid-template-columns: 100%;
     /* max-width: 1920px; Ya veremos si lo dejo */
-    max-width: 1700px;
+    max-width: 1920px;
     margin: auto;
 }
 
@@ -80,6 +80,26 @@ body {
     padding: 2rem;
     font-size: 1.8em;
     font-family: 'Satisfy', cursive;
+}
+
+.videos {
+    background-color: black;
+}
+
+.container-video {
+    position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+
+iframe {
+    display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 @media (min-width: 960px) {
