--- a/assets/style.css
+++ b/assets/style.css
@@ -102,6 +102,17 @@ iframe {
 	height: 100%;
 }
 
+.galeria {
+    width: 100%;
+    height: 100vh;
+}
+
+.galleria{ 
+    width: 100%; 
+    height: 100%; 
+    background: #000 
+}
+
 @media (min-width: 960px) {
 
     .container {
