--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,7 @@ body {
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 100;
     /* TODO menu borroso en chrome */
 }
 
@@ -66,6 +67,7 @@ body {
     border-right: 2px white solid;
     border-top-right-radius: 5px;
     margin: 1rem;
+    z-index: 100;
 }
 
 .iconMenu:hover {
@@ -90,7 +92,13 @@ body {
     position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
 	padding-top: 25px;
-	height: 0;
+    height: 0;
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+}
+
+.text-center {
+    text-align: center;
 }
 
 iframe {
@@ -103,6 +111,7 @@ iframe {
 }
 
 .galeria {
+    background-color: black;
     width: 100%;
     height: 100vh;
 }
@@ -111,6 +120,28 @@ iframe {
     width: 100%; 
     height: 100%; 
     background: #000 
+}
+
+.videos h1 {
+    color: white;
+    font-family: 'Calligraffitti', cursive;
+}
+
+.videos h1:first-of-type {
+    margin-top: 16rem;
+}
+
+.galeria h1 {
+    color: white;
+}
+
+.title {
+    font-size: 4rem;
+    font-family: 'Calligraffitti', cursive;
+}
+
+.icon {
+    vertical-align: bottom;
 }
 
 @media (min-width: 960px) {
@@ -190,6 +221,11 @@ iframe {
     }
     .row-5 {
         grid-row: 5;
+    }
+
+    .container-video {
+        margin: 12rem;
+        padding: 16rem;
     }
 
   }
