--- a/assets/style.css
+++ b/assets/style.css
@@ -169,7 +169,7 @@ iframe {
     margin-top: 8rem;
     display: grid;
     grid-template-columns: 40% 50%;
-    gap: 1rem;
+    gap: 0;
 }
 
 .contacto div.contacto-grid img, .contacto div.contacto-grid a {
@@ -180,6 +180,7 @@ iframe {
 
 .contacto div.contacto-grid img {
     justify-self: end;
+    padding-right: 1rem;
 }
 
 .contacto div.contacto-grid a {
