--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,10 @@ body {
     /* background: black; */
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .container {
     display: grid;
     grid-gap: 0;
@@ -31,6 +35,7 @@ body {
 .bgHome nav {
     text-align: center;
     display: none;
+    z-index: 98;
 }
 
 .bgHome nav ul {
@@ -222,6 +227,8 @@ iframe {
     height: 3rem;
     margin: 0 1rem 1rem 0;
     cursor: pointer;
+    z-index: 50;
+    visibility: hidden;
 }
 
 .icon-up:hover {
@@ -248,6 +255,55 @@ iframe {
     left: 1rem;
 }
 
+#pantallaBloqueo {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #222222;
+    z-index: 1000;
+
+    /**/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+
+    /*  */
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(124,124,124,1) 35%, rgba(255,255,255,1) 100%); 
+}
+
+#pantallaBloqueo img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 120px;
+    height: 120px;
+    margin:-60px 0 0 -60px;
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+}
+
+#pantallaBloqueo h1 {
+    margin-bottom: 5rem;
+    color: white;
+    font-family: 'Calligraffitti', cursive;
+}
+
+#pantallaBloqueo h2 {
+    margin-top: 5rem;
+    color: white;
+    font-family: 'Calligraffitti', cursive;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
 @media (min-width: 960px) {
 
     .container {
@@ -256,6 +312,8 @@ iframe {
 
     .bgHome nav {
         display: block;
+        position: fixed;
+        width: 100%;
     }
 
     .bgHome nav ul {
@@ -264,6 +322,9 @@ iframe {
         transform: initial;
         background-color: initial;
         width: initial;
+        /* background-color: rgba(0, 0, 0, 0.8); */
+        height: initial;
+        padding-bottom: 2rem;
     }
 
     .bgHome nav ul li {
