--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     /* background: black; */
     color: #263238;
+    overflow-x: hidden;
 }
 
 html {
@@ -215,17 +216,19 @@ iframe {
 }
 
 .footer {
-    background-image: url("./images/bg-llamas-humo-5.jpg");
+    background: rgb(38,50,56);
+    background: linear-gradient(0deg, rgba(38,50,56,1) 0%, rgba(0,0,0,1) 60%);
+    /* background-image: url("./images/bg-llamas-humo-5.jpg"); */
     /* max-width: 1500px; Ya veremos si lo dejo*/
     margin: auto;
     /* Set a specific height */
     min-height: 50vh; 
   
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    /* background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
 }
 
 .icon-up {
@@ -358,6 +361,55 @@ div.titleBgHome {
     font-weight: 100;
 }
 
+div.footerGrid {
+    display: grid;
+    grid-template-columns: 100%;
+    gap: 2rem;
+    padding: 10rem 2rem 2rem 2rem;
+    font-family: 'Satisfy', cursive;
+}
+
+div.footerGrid a, div.footerGrid p {
+    font-family: 'Satisfy', cursive;
+    color: white;
+    text-decoration: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.item-grid-align-center {
+    align-self: center;
+    justify-self: center;
+}
+
+div.footerGrid .pBorder {
+    border-bottom: 1px solid white;
+}
+
+div.footerGrid img.iconLenguaje {
+    width: 30px;
+    margin-right: 0.5rem;
+    vertical-align: middle;
+}
+
+.pCopyright {
+    color: white;
+    font-family: 'Satisfy', cursive;
+}
+
+#audioBg {
+    display: none;
+}
+
+#controlAudio {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    cursor: pointer;
+    z-index: 100;
+    margin: 0 0 0.5rem 0.5rem;
+}
+
 @media (min-width: 960px) {
 
     .container {
@@ -429,8 +481,20 @@ div.titleBgHome {
     .col-2 {
         grid-column: 2;
     }
+    .col-3 {
+        grid-column: 3;
+    }
+    .col-4 {
+        grid-column: 4;
+    }
     .col-1-2 {
         grid-column: 1 / 3;
+    }
+    .col-1-4 {
+        grid-column: 1 / 5;
+    }
+    .col-2-3 {
+        grid-column: 2 / 4;
     }
 
     .row-1 {
@@ -482,6 +546,10 @@ div.titleBgHome {
 
     div.titleBgHome {
         display: initial;
+    }
+
+    div.footerGrid {
+        grid-template-columns: auto auto auto auto;
     }
 
   }
