Nuevos cambios vistos con Joni

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Calligraffitti|Satisfy&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Calligraffitti|Satisfy&display=swap'); */
+@import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
 
 body {
     margin: 0;
@@ -16,7 +17,7 @@ html {
     grid-gap: 0;
     grid-template-columns: 100%;
     /* max-width: 1920px; Ya veremos si lo dejo */
-    max-width: 1920px;
+    /* max-width: 1920px; */
     margin: auto;
 }
 
@@ -41,7 +42,7 @@ html {
 }
 
 .bgHome nav ul {
-    font-family: 'Calligraffitti', cursive;
+    font-family: 'PT Serif', serif;
     margin: 0;
     list-style: none;
     position: fixed;
@@ -56,7 +57,7 @@ html {
 }
 
 .bgHome nav ul li {
-    display: block;
+    /* display: block; */
     margin-right: 3rem;
     font-size: 2rem;
     border-bottom: 1px solid white;
@@ -98,7 +99,8 @@ html {
 .inicio {
     padding: 2rem;
     font-size: 1.8em;
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
+    text-align: justify;
     /* background-color: white; */
 }
 
@@ -142,7 +144,7 @@ iframe {
 
 .videos h1 {
     color: white;
-    font-family: 'Calligraffitti', cursive;
+    font-family: 'PT Serif', serif;
 }
 
 .videos h1:first-of-type {
@@ -155,7 +157,7 @@ iframe {
 
 .title {
     font-size: 4rem;
-    font-family: 'Calligraffitti', cursive;
+    font-family: 'PT Serif', serif;
 }
 
 .icon {
@@ -201,8 +203,8 @@ iframe {
 
 .contacto div.contacto-grid a {
     justify-self: center;
-    /* font-family: 'Calligraffitti', cursive; */
-    font-family: 'Satisfy', cursive;
+    /* font-family: 'PT Serif', serif; */
+    font-family: 'PT Serif', serif;
     color: gray;
     font-size: 2rem;
     text-decoration: none;
@@ -303,13 +305,13 @@ iframe {
 #pantallaBloqueo h1 {
     margin-bottom: 5rem;
     color: white;
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
 }
 
 #pantallaBloqueo h2 {
     margin-top: 5rem;
     color: white;
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
 }
 
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@@ -331,12 +333,12 @@ iframe {
 
 .agenda p, .agenda a {
     font-size: 1.8em;
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
     margin: 2rem 3rem;
 }
 
 .agenda a {
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
     display: block;
     text-align: center;
     text-decoration: none;
@@ -357,7 +359,7 @@ div.titleBgHome {
     color: white;
     font-size: 4rem;
     text-align: center;
-    font-family: 'Calligraffitti', cursive;
+    font-family: 'PT Serif', serif;
     font-weight: 100;
 }
 
@@ -366,11 +368,11 @@ div.footerGrid {
     grid-template-columns: 100%;
     gap: 2rem;
     padding: 10rem 2rem 2rem 2rem;
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
 }
 
 div.footerGrid a, div.footerGrid p {
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
     color: white;
     text-decoration: none;
     font-size: 1.5rem;
@@ -394,7 +396,7 @@ div.footerGrid img.iconLenguaje {
 
 .pCopyright {
     color: white;
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
 }
 
 #audioBg {
