--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Calligraffitti|Satisfy&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Calligraffitti|Satisfy&display=swap'); */
+@import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
 
 body {
     margin: 0;
@@ -21,13 +22,12 @@ html {
 }
 
 .bgHome {
-    background-image: url("./images/bg-llamas-humo-5.jpg");
+    background-image: url("./images/bg-llamas-humo-5.png");
     /* max-width: 1500px; Ya veremos si lo dejo*/
     margin: auto;
     /* Set a specific height */
     min-height: 100vh; 
-    max-width: 100vw; 
-
+  
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
@@ -42,7 +42,7 @@ html {
 }
 
 .bgHome nav ul {
-    font-family: 'Calligraffitti', cursive;
+    font-family: 'PT Serif', serif;
     margin: 0;
     list-style: none;
     position: fixed;
@@ -57,7 +57,7 @@ html {
 }
 
 .bgHome nav ul li {
-    display: block;
+    /* display: block; */
     margin-right: 3rem;
     font-size: 2rem;
     border-bottom: 1px solid white;
@@ -99,7 +99,8 @@ html {
 .inicio {
     padding: 2rem;
     font-size: 1.8em;
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
+    text-align: justify;
     /* background-color: white; */
 }
 
@@ -143,7 +144,7 @@ iframe {
 
 .videos h1 {
     color: white;
-    font-family: 'Calligraffitti', cursive;
+    font-family: 'PT Serif', serif;
 }
 
 .videos h1:first-of-type {
@@ -156,7 +157,7 @@ iframe {
 
 .title {
     font-size: 4rem;
-    font-family: 'Calligraffitti', cursive;
+    font-family: 'PT Serif', serif;
 }
 
 .icon {
@@ -202,8 +203,8 @@ iframe {
 
 .contacto div.contacto-grid a {
     justify-self: center;
-    /* font-family: 'Calligraffitti', cursive; */
-    font-family: 'Satisfy', cursive;
+    /* font-family: 'PT Serif', serif; */
+    font-family: 'PT Serif', serif;
     color: gray;
     font-size: 2rem;
     text-decoration: none;
@@ -268,6 +269,29 @@ iframe {
     left: 1rem;
 }
 
+.theme {
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    top: 0.3rem;
+    cursor: pointer;
+    z-index: 99;
+}
+
+.tDefault {
+    background: rgb(187,187,187);
+    /* background: radial-gradient(circle, rgba(187,187,187,1) 0%, rgba(255,255,255,1) 100%); */
+    right: 9rem;
+}
+
+.tBlack {
+    background: rgb(0,0,0);
+    /* background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(187,187,187,1) 100%); */
+    right: 7rem;
+}
+
 #pantallaBloqueo {
     position: fixed;
     top: 0;
@@ -304,13 +328,13 @@ iframe {
 #pantallaBloqueo h1 {
     margin-bottom: 5rem;
     color: white;
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
 }
 
 #pantallaBloqueo h2 {
     margin-top: 5rem;
     color: white;
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
 }
 
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@@ -332,12 +356,12 @@ iframe {
 
 .agenda p, .agenda a {
     font-size: 1.8em;
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
     margin: 2rem 3rem;
 }
 
 .agenda a {
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
     display: block;
     text-align: center;
     text-decoration: none;
@@ -358,7 +382,7 @@ div.titleBgHome {
     color: white;
     font-size: 4rem;
     text-align: center;
-    font-family: 'Calligraffitti', cursive;
+    font-family: 'PT Serif', serif;
     font-weight: 100;
 }
 
@@ -367,11 +391,11 @@ div.footerGrid {
     grid-template-columns: 100%;
     gap: 2rem;
     padding: 10rem 2rem 2rem 2rem;
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
 }
 
 div.footerGrid a, div.footerGrid p {
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
     color: white;
     text-decoration: none;
     font-size: 1.5rem;
@@ -395,7 +419,7 @@ div.footerGrid img.iconLenguaje {
 
 .pCopyright {
     color: white;
-    font-family: 'Satisfy', cursive;
+    font-family: 'PT Serif', serif;
 }
 
 #audioBg {
@@ -427,6 +451,25 @@ div.footerGrid img.iconLenguaje {
     border: 2px solid #263238;
 }
 
+#titleFirstVideo,
+#titleSecondVideo,
+#titleThreeVideo,
+#containerFirstVideo,
+#containerSecondVideo,
+#containerThreeVideo,
+#titleBiografia, 
+#imgBiografia, 
+#biop1, 
+#biop2, 
+#biop3, 
+#biop4, 
+#biop5, 
+#titleGaleria,
+#titleVideos,
+#titleAgenda {
+    visibility: hidden;
+}
+
 @media (min-width: 960px) {
 
     .container {
@@ -434,6 +477,7 @@ div.footerGrid img.iconLenguaje {
     }
 
     .bgHome nav {
+        text-align: left;
         display: block;
         position: fixed;
         width: 100%;
@@ -450,14 +494,25 @@ div.footerGrid img.iconLenguaje {
     }
 
     .bgHome nav ul li {
-        display: inline;
+        display: block;
+        margin-top: 5rem;
         border: none;
         padding: initial;
     }
 
     .bgHome nav ul li a {
         display: inline-block;
+        width: 10rem;
+        background-color: #2D3440;
+        border-radius: 3px;
+        padding: 0.5rem 0.5rem 0 0.5rem;
+        text-align: left;
+        border: 1px solid transparent;
     }
+
+    /* .bgHome nav ul li a:hover {
+        width: 12rem;
+    } */
 
     a.linkMenu:after {
         content: '';
