--- a/assets/style.css
+++ b/assets/style.css
@@ -38,6 +38,8 @@ html {
     text-align: center;
     display: none;
     z-index: 98;
+
+    transition: all .6s;
 }
 
 .bgHome nav ul {
@@ -52,6 +54,8 @@ html {
     width: 100%;
     height: 100vh;
     padding-top: 3rem;
+
+    transition: all .6s;
 }
 
 .bgHome nav ul li {
@@ -80,6 +84,7 @@ html {
     border-top-right-radius: 5px;
     margin: 1rem;
     z-index: 100;
+    transition: border .6s;
 }
 
 .iconMenu:hover {
@@ -283,6 +288,8 @@ iframe {
 
     background: rgb(0,0,0);
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(124,124,124,1) 35%, rgba(255,255,255,1) 100%); 
+
+    transition: opacity .6s;
 }
 
 #pantallaBloqueo img {
@@ -433,6 +440,9 @@ div.footerGrid img.iconLenguaje {
         display: block;
         position: fixed;
         width: 100%;
+
+        transition: all 2s;
+
     }
 
     .bgHome nav ul {
