--- a/assets/style.css
+++ b/assets/style.css
@@ -22,17 +22,19 @@ html {
 }
 
 .bgHome {
-    background-image: url("./images/bg-llamas-humo-5.png");
+    background-image: url("./images/bg-home.png");
     /* max-width: 1500px; Ya veremos si lo dejo*/
     margin: auto;
     min-height: 100vh; 
     max-width: 100vw; 
 
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    /* background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover; */
     background-size: cover;
+    background-position: top;
 }
 
 .bgHome nav {
@@ -96,15 +98,22 @@ html {
     max-width: 100%;
 }
 
+.inicioImg {
+    float: left;
+}
+
 .contactoImg {
     background-color: black;
 }
 
-.inicio {
-    padding: 2rem;
-    font-size: 1.5em;
+#biografia {
+    max-width: 1920px;
+    font-size: 1.3em;
     font-family: 'Montserrat', sans-serif;
+    text-align: justify;
+    margin: 0 auto;
 }
+
 
 .videos {
     background-color: black;
@@ -207,14 +216,14 @@ iframe {
     justify-self: center;
     font-family: 'Ubuntu', sans-serif;
     color: #a4b0be;
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     text-decoration: none;
     border-bottom: 1px solid transparent;
 }
 
 .contacto div.contacto-grid a:hover, .agenda a:hover {
     color: #8BB7F0;
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     border-bottom: 1px solid;
 }
 
@@ -354,9 +363,10 @@ iframe {
 
 div.titleBgHome {
     display: none;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
+    transition: opacity .4s;
 }
 
 .titleBgHome h1 {
@@ -365,6 +375,11 @@ div.titleBgHome {
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 100;
+}
+
+#titleBiografia {
+    margin: 0;
+    padding-top: 1.5rem;
 }
 
 div.footerGrid {
@@ -453,6 +468,10 @@ div.footerGrid img.iconLenguaje {
     opacity: .8;
 }
 
+.p-bio-desc {
+    padding: 0 2rem;
+}
+
 .icon-idioma-preload {
     width: 20px;
     vertical-align: text-top;
@@ -520,11 +539,16 @@ div.footerGrid img.iconLenguaje {
         display: none;
     }
 
-    .inicioImg, .agendaImg, .contactoImg {
+    .agendaImg, .contactoImg {
         position: sticky;
         position: -webkit-sticky;
         top: 0;
         z-index: -1;
+    }
+
+    .inicioImg {
+        width: 50%;
+        margin-right: 2rem;
     }
 
     .col-1 {
