Cambio de fuente biografía

--- a/assets/style.css
+++ b/assets/style.css
@@ -109,7 +109,7 @@ html {
 #biografia {
     max-width: 1920px;
     font-size: 1.3em;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     text-align: justify;
     margin: 0 auto;
 }
