--- a/assets/style.css
+++ b/assets/style.css
@@ -296,7 +296,7 @@ iframe {
     text-align: center;
     align-items: center;
 
-    background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0.8)) , url(./images/bg.png);
+    background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0.8)) , url(./images/bg-phone.png);
     background-size: cover;
     background-position: center;
 
@@ -479,6 +479,10 @@ div.footerGrid img.iconLenguaje {
 
 
 @media (min-width: 960px) {
+
+    #pantallaBloqueo {
+        background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0.8)) , url(./images/bg.png);
+    }
 
     .container {
         grid-template-columns: 50% 50%;
